--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     <!-- Adicione mais candidatos conforme necessário -->
                 </select>
             </div>
-            <audio id="votarSound" src="C:\Users\FelipeNolleDeOliveir\Downloads\URNA.mp3"></audio>
+            <audio id="votarSound" src="URNA.mp3"></audio>
             <button type="button" onclick="submitVote()" class="btn btn-primary">Votar</button>
             
             <!-- Adicione o botão "Votar em Branco" -->
