--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@
         </form>
         <div id="result" class="mt-4">
             <div id="candidateImages">
-                <img data-candidate="candidato1" src="R.jfif" alt="Imagem do Candidato 1" class="candidate-image img-fluid rounded">
-                <img data-candidate="candidato2" src="Sociedade Esportiva Pauferrense.png" alt="Imagem do Candidato 2" class="candidate-image img-fluid rounded">
-                <img data-candidate="candidato3" src="OIP (2).jfif" alt="Imagem do Candidato 3" class="candidate-image img-fluid rounded">
+                <img data-candidate="candidato1" src="images/R.jfif" alt="Imagem do Candidato 1" class="candidate-image img-fluid rounded">
+                <img data-candidate="candidato2" src="images/Sociedade Esportiva Pauferrense.png" alt="Imagem do Candidato 2" class="candidate-image img-fluid rounded">
+                <img data-candidate="candidato3" src="images/OIP (2).jfif" alt="Imagem do Candidato 3" class="candidate-image img-fluid rounded">
                 <!-- Adicione mais imagens conforme necessário -->
             </div>
         </div>
