--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
 <body>
     <div id="app">
         <div class="header">
-            <h1 class="text-primary">Sistema de Votação</h1>
-            <p class="text-muted">Vote de maneira fácil e segura</p>
+            <h1 class="text-primary">Grêmio Estudantil</h1>
+            <p class="text-muted">E.E. Prof. Anna Calvo de Godoy</p>
         </div>
         <form id="votingForm">
             <div class="form-group">
-                <label for="candidate">Escolha o Candidato:</label>
+                <label for="candidate">Escolha uma Chapa:</label>
                 <select id="candidate" class="form-control" onchange="updateCandidateImage()" required>
                     <option value="" disabled selected>Selecione um candidato</option>
                     <option value="candidato1">Candidato 1</option>
