--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         </div>
         <form id="votingForm">
             <div class="form-group">
-                <label for="candidate">Escolha uma Chapa:</label>
+                <label for="candidate">Escolha a Chapa:</label>
                 <select id="candidate" class="form-control" onchange="updateCandidateImage()" required>
                     <option value="" disabled selected>Selecione um candidato</option>
                     <option value="candidato1">Candidato 1</option>
