Mensagem do commit

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         </form>
         <div id="result" class="mt-4">
             <div id="candidateImages">
-                <img data-candidate="candidato1" src="images/up.png" alt="Imagem do Candidato 1" class="candidate-image img-fluid rounded">
+                <img data-candidate="candidato1" src="images/logo_grêmioestudantil.png" alt="Imagem do Candidato 1" class="candidate-image img-fluid rounded">
                 <img data-candidate="candidato2" src="images/Sociedade Esportiva Pauferrense.png" alt="Imagem do Candidato 2" class="candidate-image img-fluid rounded">
                 <img data-candidate="candidato3" src="images/ng.png" alt="Imagem do Candidato 3" class="candidate-image img-fluid rounded">
                 <!-- Adicione mais imagens conforme necessário -->
