--- a/index.html
+++ b/index.html
@@ -106,9 +106,7 @@
                 <label for="candidate">Escolha a Chapa:</label>
                 <select id="candidate" class="form-control" onchange="updateCandidateImage()" required>
                     <option value="" disabled selected>Selecione um candidato</option>
-                    <option value="candidato1">Candidato 1</option>
-                    <option value="candidato2">Candidato 2</option>
-                    <option value="candidato3">Candidato 3</option>
+                    <option value="Movimento Jovem">Movimento Jovem</option>
                     <!-- Adicione mais candidatos conforme necessário -->
                 </select>
             </div>
@@ -123,9 +121,7 @@
         </form>
         <div id="result" class="mt-4">
             <div id="candidateImages">
-                <img data-candidate="candidato1" src="images/logo_grêmioestudantil.png" alt="Imagem do Candidato 1" class="candidate-image img-fluid rounded">
-                <img data-candidate="candidato2" src="images/Sociedade Esportiva Pauferrense.png" alt="Imagem do Candidato 2" class="candidate-image img-fluid rounded">
-                <img data-candidate="candidato3" src="images/ng.png" alt="Imagem do Candidato 3" class="candidate-image img-fluid rounded">
+                <img data-candidate="Movimento Jovem" src="images/logo_grêmioestudantil.png" alt="Imagem do Movimento Jovem" class="candidate-image img-fluid rounded">
                 <!-- Adicione mais imagens conforme necessário -->
             </div>
         </div>
